fix(tabs): resolve content overflow (#1931)
* fix(tabs): resolve content overflow

* test(tabs): update snapshot

--- a/src/tab-panel/tab-panel.less
+++ b/src/tab-panel/tab-panel.less
@@ -5,4 +5,5 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
